bpo-34532: Fixed exit code for py.exe list versions arg

Previously, any of the list version args would cause the launcher to exit with the `RC_NO_PYTHON` error code. This change causes the list version args to exit successfully.