PC/launcher.c
@@ -1468,6 +1468,7 @@ process(int argc, wchar_t ** argv)
     size_t plen;
     INSTALLED_PYTHON * ip;
     BOOL valid;
+    BOOL version_call = FALSE;
     DWORD size, attrs;
     HRESULT hr;
     wchar_t message[MSGSIZE];
@@ -1600,14 +1601,15 @@ process(int argc, wchar_t ** argv)
     }
     else {
         p = argv[1];
-        plen = wcslen(p);
         if ((argc == 2) && 
-            (!wcsncmp(p, L"-0", wcslen(L"-0")) || /* Starts with -0 or --list */
-            !wcsncmp(p, L"--list", wcslen(L"--list"))))
+            (!_wcsicmp(p, L"-0") || !_wcsicmp(p, L"--list") || /* Version args. */
+            !_wcsicmp(p, L"-0p") || !_wcsicmp(p, L"--list-paths")))
         {
-            valid = show_python_list(argv); /* Check for -0 or --list FIRST */
+            show_python_list(argv);
+            version_call = TRUE;
+            executable = NULL;
         }
-        valid = valid && (*p == L'-') && validate_version(&p[1]);
+        valid = !version_call && (*p == L'-') && validate_version(&p[1]);
         if (valid) {
             ip = locate_python(&p[1], FALSE);
             if (ip == NULL)
@@ -1638,29 +1640,25 @@ installed, use -0 for available pythons", &p[1]);
     if (!valid) {
         if ((argc == 2) && (!_wcsicmp(p, L"-h") || !_wcsicmp(p, L"--help")))
             show_help_text(argv);
-        if ((argc == 2) &&
-            (!_wcsicmp(p, L"-0") || !_wcsicmp(p, L"--list") ||
-            !_wcsicmp(p, L"-0p") || !_wcsicmp(p, L"--list-paths")))
-        {
-            executable = NULL; /* Info call only */
-        }
-        else {
-            /* Look for an active virtualenv */
-            executable = find_python_by_venv();
 
-            /* If we didn't find one, look for the default Python */
-            if (executable == NULL) {
-                ip = locate_python(L"", FALSE);
-                if (ip == NULL)
-                    error(RC_NO_PYTHON, L"Can't find a default Python.");
-                executable = ip->executable;
-            }
+        /* Look for an active virtualenv */
+        executable = find_python_by_venv();
+
+        /* If we didn't find one, look for the default Python */
+        if (executable == NULL) {
+            ip = locate_python(L"", FALSE);
+            if (ip == NULL)
+                error(RC_NO_PYTHON, L"Can't find a default Python.");
+            executable = ip->executable;
         }
     }
-    if (executable != NULL)
-        invoke_child(executable, NULL, command);
-    else
+    if (executable == NULL) {
         rc = RC_NO_PYTHON;
+    }
+    else if (!version_call) {
+        invoke_child(executable, NULL, command);
+    }
+
     return rc;
 }
 
